# Erdwolf

./: .env  .gitignore  .gitmodules  Cargo.toml  README.md  Rocket.toml  Taskfile.yml  build.gradle.kts  erdwolf.db  go.mod  go.sum  settings.gradle.kts
.github/workflows/: go.yml
app/: app.go  auth.go  auth_core.go  config.go  database.go  db_migrate.go  errors.go  find_user.go  routes.go  secrets.go  server.go
cmd/erdweb/: auth_setup.go  defaults.go  main.go
cmd/erdwolf-server/: app_config.go  main.go
cmd/erdwolfd/: app_config.go  auth_setup.go  defaults.go  main.go
config/: application.toml  database.toml
css/: theme.css
frontend/: index.go  new.go  routes.go  signin.go
internal/app/: app.go  auth.go  config.go  database.go  db_migrate.go  errors.go  http.go  server.go  template.go  users.go
internal/auth/: types.go
internal/configs/: app.go  assets.go  auth.go  database.go  general.go  secrets.go
internal/db/: migration.go
internal/webssr/: index.go  routes.go  signin.go
migrations/: 000000_create_table_users.toml
migrations/2020-08-21-103311_users/: up.sql
migrations/2020-08-21-103314_groups/: up.sql
migrations/2020-08-21-103319_users_groups/: down.sql  up.sql
migrations/2020-08-21-103324_containers/: up.sql
migrations/2020-08-21-103330_ports/: up.sql
sass/: _colors.scss  _logo.scss  web.scss
sass/base/: _flex.scss  (+6 more)
src/: Application.kt  forms.rs  main.rs  paths.rs  schema.rs  template_models.rs
templates/: home.hbs  index.hbs  login.hbs  register.hbs  register.hbs.json
test/: ApplicationTest.kt
web/: config.go  server.go
(+47 files in other folders)
