[package]
authors = ["MGlolenstine <mglolenstine@gmail.com>"]
edition = "2018"
name = "erdwolf"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
argonautica = "0.2.0"
diesel = {version = "1.4.5", features = ["sqlite"]}
dotenv = "0.15.0"
dotenv_codegen = "0.15.0"
rand = "0.7.3"
rocket = "0.4.5"
serde = {version = "1.0.115", features = ["derive"]}
serde_json = "1.0.57"

[dependencies.rocket_contrib]
default-features = false
features = ["templates", "handlebars_templates", "serve", "json"]
version = "0.4.5"
